fixed footer issue, got text to go behind header in portfolio page. still working on interests page

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,3 @@
-body {
-  background-image: url("images/clouds.jpg");
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  font-family: 'Exo 2', sans-serif;
-  color: #181842;
-}
-
 .container {
   width: 100%;
   height: 200px; 
@@ -77,8 +68,7 @@ li a {
   text-shadow: -1px 0 #181842, 0 1px #181842, 1px 0 #181842, 0 -1px #181842;
   font-family: 'Exo 2', sans-serif;
   font-size: 20px;
-  text-transform: uppercase;
- 
+  text-transform: uppercase; 
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -120,10 +110,46 @@ header.minimized {
   
 }
 
+
+/*BODY*/
+
+body {
+  background-image: url("images/clouds.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  font-family: 'Exo 2', sans-serif;
+  color: #181842;
+}
+
+.wrapper {
+    width:100%;
+    position:fixed;
+    z-index:10;
+    background:inherit;
+}
+
+.bottom-wrapper {
+    width:100%;
+    padding-top:92px;
+    z-index:5;
+    overflow:auto;
+}
+
 .footer {
   background-color: #181842;
   color: #d8e9ef;
-  position: fixed;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+}
+
+.footer_scroll {
+  background-color: #181842;
+  color: #d8e9ef;
+  position: relative;
   bottom: 0;
   left: 0;
   right: 0;
